@@ -1,3 +1,4 @@
+# -*- tcl -*-
 # Tests for the counter module.
 #
 # This file contains a collection of tests for a module in the
@@ -9,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: counter.test,v 1.5 2003/04/24 18:45:45 andreas_kupries Exp $
+# RCS: @(#) $Id: counter.test,v 1.6 2003/05/02 22:32:11 andreas_kupries Exp $
 
 package require tcltest
 namespace import -force ::tcltest::*
@@ -168,7 +169,7 @@ test counter-histlog {counter::count} {
     counter::get histlog -hist
 } {-2 1 0 4 1 2 2 1 3 2 4 1 5 1 6 2}
 
-test counter-timehist {counter::count} {
+test counter-timehist {counter::count} {load-dependent} {
     counter::init hits -timehist 4
     catch {puts stderr "Pausing during timehist tests"}
     counter::count hits 2
@@ -185,10 +186,12 @@ test counter-timehist {counter::count} {
 	    lappend result [expr {$n - $min0}] $v
 	}
     }
+
+    puts "timehist [time {counter::count hits} 100]"
+
     set result
 } {0 2 1 4 2 8}
 
-puts "timehist [time {counter::count hits} 100]"
 
 test counter-countNames {counter::names} {
     counter::init simple
