@@ -1,3 +1,9 @@
+2003-05-02  Andreas Kupries  <andreask@activestate.com>
+
+	* counter.test: Deactivated 'counter-timehist' (via constraint),
+	  this test is load-dependent. I.e. it will fail if the machine
+	  the test are run on is heavily loaded.
+
 2003-04-24  Andreas Kupries  <andreask@activestate.com>
 
 	* counter.test: Added missing propagation of test results.
